# confjson

./: .coveragerc  .style.yapf  .travis.yml  README.md  pylintrc  pyproject.toml  pytest.ini  setup.py
confjson/: __init__.py
tests/: test_confjson.py
